<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Random Selector</string>
    <string name="menu_settings">Settings</string>

    <!-- CategoryList -->
    <string name="add_category">Add Category</string>
    <string name="category_list_header">Categories</string>
    <string name="delete_category">Delete</string>
    <string name="no_categories">No Categories...Yet</string>

    <!-- ItemList -->
    <string name="add_item">Add Item</string>
    <string name="select_random">Select Random</string>
    <string name="delete_all_items">Delete All Items</string>
    <string name="delete_item">Delete</string>
    <string name="no_items">No Items...Yet</string>

    <!-- EditList -->
    <string name="submit">Submit</string>
    <string name="category_hint">Enter Category Name</string>
    <string name="item_hint">Enter Item Name</string>

</resources>